--- a/client/css/overlapping-carousel.css
+++ b/client/css/overlapping-carousel.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-/* CSS Document */
 /* page styles */
 .ax-hidden {
   visibility: hidden;
@@ -7,17 +5,17 @@
 }
 
 /* carousel styles */
-.carousel {
-  --carousel-height: 300px;
+#piecharts.carousel2 {
+  --carousel-height: 345px;
   --carousel-width: 1000px;
-  --carousel-item-height: 168px;
+  --carousel-item-height: 200px;
   --carousel-item-width: 300px;
 
   margin:50px 0;
   width: 100%;
 }
 
-.carousel-container {
+#piecharts .carousel-container {
   align-items: center;
   display: flex;
   min-height: var(--carousel-height);
@@ -26,7 +24,7 @@
   position: relative;
 }
 
-.carousel-item {
+.carousel2-item {
   height: var(--carousel-item-height);
   opacity: 0;
   position: absolute;
@@ -79,42 +77,42 @@
   z-index:-2;
 }
 
-.carousel-controls {
+#piecharts .carousel-controls {
   display: flex;
   justify-content: center;
   margin: 30px 0;
 }
 
 /* carousel button styles */
-.carousel-control {  
+#piecharts .carousel-control {  
   background-color: transparent;
   border-style:none;
   color: #0079c2;
   cursor: pointer;
-  margin: 0 65px;
+  opacity:1;
   position: relative;
-  transform: scale(1.5);
   transition: all 0.25s ease-out;
+  text-shadow: none;
 }
 
-.carousel-control:hover {
+#piecharts .carousel-control:hover {
   color:#222;
 }
 
 /* previous button */
-.carousel-control-previous::after,
-.carousel-control-previous::before {
+#piecharts .carousel-control-previous::after,
+#piecharts .carousel-control-previous::before {
   box-sizing: border-box; 
   display: block;
   height: 8px;
   position: absolute;
   top: 5px
 }
-.carousel-control-previous::before {
+#piecharts .carousel-control-previous::before {
   background: transparent;
   content: '<\00a0Previous';
 }
-.carousel-control-previous::after {
+#piecharts .carousel-control-previous::after {
   border-bottom: 4px solid transparent;
   border-right: 5px solid;
   border-top: 4px solid transparent;
@@ -123,28 +121,22 @@
 }
 
 /* next button */
-.carousel-control-next::after,
-.carousel-control-next::before {
+#piecharts .carousel-control-next::after,
+#piecharts .carousel-control-next::before {
   box-sizing: border-box;
   display: block;
   height: 8px;
   position: absolute;
   top: 5px
 }
-.carousel-control-next::before {
+#piecharts .carousel-control-next::before {
   background: transparent;
   content: 'Next\00a0>';
 }
-.carousel-control-next::after {
+#piecharts .carousel-control-next::after {
   border-bottom: 4px solid transparent;
   border-left: 5px solid;
   border-top: 4px solid transparent;
   left: 5px;
   width: 0;
 }
-
-
-
-
-
-
