--- a/client/css/overlapping-carousel.css
+++ b/client/css/overlapping-carousel.css
@@ -1,10 +1,16 @@
-/* page styles */
+/* overlapping carousel styles */
 .ax-hidden {
   visibility: hidden;
   position: absolute;
 }
-
-/* carousel styles */
+#piecharts.carousel2 {
+    --carousel-height:310px;
+    --carousel-item-height:125px;
+    --carousel-item-width:200px;
+    --carousel-width:450px;
+    width:100%;
+}
+@media(min-width:767px){
 #piecharts.carousel2 {
   --carousel-height: 345px;
   --carousel-width: 1000px;
@@ -14,7 +20,7 @@
   margin:50px 0;
   width: 100%;
 }
-
+}
 #piecharts .carousel-container {
   align-items: center;
   display: flex;
