--- a/client/css/billion-ton-report.css
+++ b/client/css/billion-ton-report.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 /* CSS Document */
+ h1 {font-size:28px;}
+@media (min-width: 768px) { 
+    h1 {font-size:36px;}
+}
+.navbar {min-height:70px;}
 .cover-image-holder{max-height:300px;height:300px;overflow:hidden;}
 .cover-text{background-color:rgba(0,0,0,0.67);top:50%;left:50%;transform:translate(-50%,-50%);position:absolute;width:55%;}
 .bg-light {background-color: #F0F0F0 !important;}
