--- a/client/css/overlapping-carousel.css
+++ b/client/css/overlapping-carousel.css
@@ -4,22 +4,23 @@
   position: absolute;
 }
 #piecharts.carousel2 {
-    --carousel-height:310px;
+    --carousel-height:220px;
     --carousel-item-height:125px;
     --carousel-item-width:200px;
     --carousel-width:450px;
     width:100%;
 }
 @media(min-width:767px){
-#piecharts.carousel2 {
-  --carousel-height: 345px;
-  --carousel-width: 1000px;
-  --carousel-item-height: 200px;
-  --carousel-item-width: 300px;
+    #piecharts.carousel2 {
+      --carousel-height: 345px;
+      --carousel-width: 1000px;
+      --carousel-item-height: 200px;
+      --carousel-item-width: 300px;
 
-  margin:50px 0;
-  width: 100%;
-}
+      margin:50px 0;
+      width: 100%;
+    }
+    #piecharts .carousel-control {font-size:20px;}
 }
 #piecharts .carousel-container {
   align-items: center;
@@ -89,6 +90,7 @@
   margin: 30px 0;
 }
 
+
 /* carousel button styles */
 #piecharts .carousel-control {  
   background-color: transparent;
@@ -99,6 +101,7 @@
   position: relative;
   transition: all 0.25s ease-out;
   text-shadow: none;
+  font-size:16px;
 }
 
 #piecharts .carousel-control:hover {
